--- a/src/iris/ui/templates/base.html
+++ b/src/iris/ui/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/static/images/iris.png?v=2">
+    <link rel="icon" href="/static/images/fworks.png?v=2">
     <title>Iris</title>
     {% assets "css_libs" %} <link href="{{ ASSET_URL }}" rel="stylesheet"> {% endassets %}
     {% assets "iris_css" %} <link href="{{ ASSET_URL }}" rel="stylesheet"> {% endassets %}
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ default_route }}"><span><img id="logo" src="/static/images/iris.png"></span><span>IRIS</span></a>
+            <a class="navbar-brand" href="{{ default_route }}"><span><img id="logo" src="/static/images/fworks.png"></span><span>IRIS</span></a>
 
           </div>
           <div id="navbar" class="navbar-collapse collapse">
@@ -56,7 +56,7 @@
     <div class="container-fluid"> <!-- content wrapper -->
       {% block content %}{% endblock %}
       <ul class="footer" data-page="{{path}}">
-        <li>Iris &copy; LinkedIn {{current_year}}</li>
+        <li>Iris &copy; Freshworks {{current_year}}</li>
         {{ extra_footer_items|safe }}
         <li><a href="/stats">Stats</a></li>
       </ul>
