--- a/src/iris/ui/templates/login.html
+++ b/src/iris/ui/templates/login.html
@@ -3,7 +3,7 @@
 <div class="main login floating-module">
   <div class="module">
     <div class="logo-wrapper">
-      <img id="logo" src="/static/images/iris.png" height="70px" width="70px">
+      <img id="logo" src="/static/images/fworks.png" height="70px" width="70px">
       <p>Iris</p>
     </div>
     <form method="POST">
