Status info update on message

--- a/src/iris/ui/templates/messages.html
+++ b/src/iris/ui/templates/messages.html
@@ -71,6 +71,7 @@
       <td class="light priority">Priority <i class="glyphicon glyphicon-sort"></i></td>
       <td class="light application">Application <i class="glyphicon glyphicon-sort"></i></td>
       <td class="light mode">Mode <i class="glyphicon glyphicon-sort"></i></td>
+      <td class="light status">Status <i class="glyphicon glyphicon-sort"></i></td>
       <td class="light sent">Sent <i class="glyphicon glyphicon-sort"></i></td>
     </tr>
   </thead>
