--- a/src/iris/ui/templates/incidents.html
+++ b/src/iris/ui/templates/incidents.html
@@ -37,6 +37,7 @@
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="Start Date" name="filter-incidentStart" id="filter-incidentStart" data-param="created__ge">
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="End Date" name="filter-end" id="filter-end" data-param="created__le">
           <button class="btn-primary pull-right btn" type="submit" id="filter-incidents">Submit</button>
+          <button class="btn-primary pull-right btn" type="reset">Reset</button>
         </span>
       </div>
       <div class="row checkbox">
