--- a/src/iris/ui/templates/messages.html
+++ b/src/iris/ui/templates/messages.html
@@ -44,6 +44,7 @@
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="Start" name="filter-start" id="filter-start" data-param="created__ge">
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="End" name="filter-end" id="filter-end" data-param="created__le">
           <button class="btn-primary pull-right btn" type="submit" id="filter-messages">Submit</button>
+          <button class="btn-primary pull-right btn" type="reset">Reset</button>
         </span>
       </div>
       <div class="row checkbox">
