--- a/src/iris/ui/templates/plans.html
+++ b/src/iris/ui/templates/plans.html
@@ -20,6 +20,7 @@
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="Start Date" name="filter-start" id="filter-start" data-param="created__ge">
           <input class="form-control border-bottom datetimepicker" type="text" placeholder="End Date" name="filter-end" id="filter-end" data-param="created__le">
           <button class="btn-primary pull-right btn" type="submit" id="filter-plans">Submit</button>
+          <button class="btn-primary pull-right btn" type="reset">Reset</button>
         </span>
       </div>
       <div class="row checkbox">
